Removes usage of deprecated API as of Java 19