@@ -1,16 +1,16 @@
 /* jcifs smb client library in Java
  * Copyright (C) 2000  "Michael B. Allen" <jcifs at samba dot org>
- * 
+ *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
  * License as published by the Free Software Foundation; either
  * version 2.1 of the License, or (at your option) any later version.
- * 
+ *
  * This library is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  * Lesser General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU Lesser General Public
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
@@ -183,7 +183,7 @@ class NameServiceClient implements Runnable {
                     log.println( "NetBIOS: new data read from socket" );
 
                 nameTrnId = NameServicePacket.readNameTrnId( rcv_buf, 0 );
-                response = (NameServicePacket)responseTable.get( new Integer( nameTrnId ));
+                response = (NameServicePacket)responseTable.get(Integer.valueOf(nameTrnId));
                 if( response == null || response.received ) {
                     continue;
                 }
@@ -220,7 +220,7 @@ class NameServiceClient implements Runnable {
                 try {
                     synchronized( LOCK ) {
                         request.nameTrnId = getNextNameTrnId();
-                        nid = new Integer( request.nameTrnId );
+                        nid = Integer.valueOf(request.nameTrnId);
 
                         out.setAddress( request.addr );
                         out.setLength( request.writeWireFormat( snd_buf, 0 ));
